<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.egco428.a13260.FortuneActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title1"
            android:textSize="19dp"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:background="@android:color/transparent" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/table_border_white"
        android:layout_below="@+id/my_toolbar1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_name"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/resultText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/table_border_white"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/closed_cookie"
            android:id="@+id/cookiesImg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:id="@+id/linearLayout3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_name1"
            android:textSize="19dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:id="@+id/resultText1"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/table_border_white"
        android:layout_below="@+id/linearLayout3"
        android:id="@+id/frame_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/result_name2"
            android:id="@+id/resultCText"
            android:layout_marginLeft="50dp"
            android:textSize="17dp"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/result_name3"
            android:id="@+id/resultFText"
            android:layout_marginLeft="110dp"
            android:textSize="17dp"
            android:textColor="@color/blue"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@color/grey"
        android:layout_below="@+id/frame_layout"
        android:id="@+id/frame_layout1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/date_name"
            android:textColor="@android:color/black"
            android:id="@+id/dateText"
            android:layout_marginRight="106dp"
            android:textSize="13dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:textColor="@android:color/black"
            android:text=""
            android:id="@+id/timestampText"
            android:layout_marginRight="2dp"
            android:textSize="12dp"/>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frame_layout1"
        android:gravity="center"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Shake"
            android:id="@+id/actionButton"
            android:background="@drawable/circularimgbtn"
            android:layout_gravity="center" />
    </LinearLayout>

</RelativeLayout>
